@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-02T16:14:22Z",
-  "count_outdated" : 370,
-  "uniques_outdated" : 200,
-  "count" : 394,
+  "timestamp" : "2022-07-03T01:05:08Z",
+  "count_outdated" : 372,
+  "uniques_outdated" : 201,
+  "count" : 396,
   "uniques" : 215,
   "clones" : [
-    {
-      "timestamp": "2022-06-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-19T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
